# ecust-dorm-electricity-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.toml.example  debug_report.py  pyproject.toml  settings.example.toml
.github/prompts/: plan-ecustDormElectricityMonitor.prompt.md
.github/workflows/: monitor.yml  test.yml
data/: electricity.csv
docs/: SERVERCHAN_GUIDE.md
src/ecust_electricity_monitor/: __init__.py  cli.py  client.py  config.py  constants.py  exceptions.py  health.py  logger.py  models.py  reporter.py  scheduler.py
src/ecust_electricity_monitor/analytics/: __init__.py  datetime_utils.py  power_analyzer.py  validators.py
src/ecust_electricity_monitor/commands/: __init__.py  alert.py  base.py  display.py  fetch.py  info.py  init.py  report.py  schedule.py
src/ecust_electricity_monitor/notifiers/: __init__.py  base.py  email.py  manager.py  serverchan.py
src/ecust_electricity_monitor/storage/: __init__.py  base.py  csv_repository.py
src/edem/: __init__.py  cli.py  config.py  fetcher.py  monitor.py  notifier.py  scraper.py  webpanel.py
src/edem/templates/: dashboard.html
tests/: conftest.py  test_config.py  test_models.py  test_storage.py  test_utils.py
